# unixcat

./: .clang-format  .gitignore  LICENSE  Makefile.am  README.md  configure.ac  format.sh  lint.sh  main.c
.github/workflows/: build.yml
include/: abstract.h  cli.h  creds.h  fdstate.h  help.h  main.h  net.h  options.h  printfd.h  security.h  seqpacket.h  serv.h  sock.h
man/: long.h2m
src/: Makefile.am  cli.c  fdstate.c  help.c  main.c  net.c  options.c  printfd_default.c  printfd_getpath.c  printfd_linux.c  printfd_procfs.c  serv.c  sock.c
src/creds/: creds_disabled.c  scmcredentials.c  scmcreds_nonpersistent.c  scmcreds_nosend.c  scmcreds_persistent.c  scmcreds_send.c
src/net/: abstract_disabled.c  abstract_enabled.c
src/printfd/: printfd_kinfo.c
src/security/: disabled.c  enabled.c
src/seqpacket/: disabled.c  enabled.c
tests/: abstract-send-recv.sh  basic-send-recv.sh  creds-bsd-send-once-recv-none.sh  creds-linux-send-once-recv-none.sh  creds-send-always-recv-always-with-pid.sh  creds-send-always-recv-always.sh  creds-send-always-recv-none-bsd.sh  creds-send-always-recv-none-linux.sh  creds-send-always-recv-once-bsd.sh  creds-send-always-recv-once-linux.sh  creds-send-none-recv-always.sh  creds-send-none-recv-once.sh  creds-send-once-recv-always-with-pid.sh  creds-send-once-recv-always.sh  creds-send-once-recv-none-bsd.sh  creds-send-once-recv-none-linux.sh  creds-send-once-recv-once.sh  creds-specify-creds.sh  pass-fds.sh  pass-scmcredentials.sh  pass-scmcreds-nonpersistent.sh  pass-scmcreds-persistent.sh  pass-seccxt.sh  protocol-mutual-exclusion.sh  seq-basic-send-recv.sh  seq-creds-recv.sh  seq-pass-fds.sh  test-lib.sh  test.sh  udp-basic-send-recv.sh  udp-creds-recv.sh  udp-pass-fds.sh
